(saterfiel) adding patients and doctor home screen
